# solarSystem

./: .gitignore  CMakeLists.txt  PROJECT_DETAILS_AND_CRITERIA_REPORT.md  PROJECT_FUNCTIONAL_REPORT.tex  README.md  WHOLE_PROJECT_LINE_BY_LINE_EXPLANATION.tex  WHOLE_PROJECT_LINE_BY_LINE_EXPLANATION.text  setup.ps1
include/: camera.h  orbit_renderer.h  planet.h  ring.h  shader.h  skybox.h  solar_system.h  sphere.h
include/algorithms/: bresenham.h  dda.h  midpoint_circle.h
shaders/: line.frag  line.vert  planet.frag  planet.vert  ring.frag  ring.frag.bak  ring.vert  skybox.frag  skybox.vert  sun.frag  sun.vert
src/: camera.cpp  main.cpp  orbit_renderer.cpp  planet.cpp  ring.cpp  shader.cpp  skybox.cpp  solar_system.cpp  sphere.cpp
src/algorithms/: bresenham.cpp  dda.cpp  midpoint_circle.cpp
